syntax = "proto3";

package proto;

option go_package = "/orderpb";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc CreateOrders(stream CreateOrdersRequest) returns (CreateOrdersResponse);
}

message CreateOrderRequest {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}

message CreateOrderResponse {
    string id = 1;
}

message CreateOrdersRequest {
    string user_id = 1;
    repeated string product_ids = 2;
}


message CreateOrdersResponse {
    string user_id = 1;
    repeated string product_ids = 2;
}


